fix : added cursor pointer on label dark mode

--- a/css/components/darktheme.css
+++ b/css/components/darktheme.css
@@ -8,6 +8,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    cursor: pointer;
 }
 
 .fa-moon {
